Split encryption & data storage chapter into two

--- a/workbook/workbook.tex
+++ b/workbook/workbook.tex
@@ -2089,7 +2089,7 @@ for a little bit of style</p>
 %%%%%%%%%%%%%%%%%
 
 \begin{comment}
-\chapter{Data Storage \& Encryption}
+\chapter{Data Storage}
 \label{lab08}
 \paragraph{} 
 \end{comment}
@@ -2101,9 +2101,22 @@ for a little bit of style</p>
 %%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%
 
+%\begin{comment}
+\chapter{Encryption}
+\label{lab09}
+\paragraph{} 
+%\end{comment}
+
+
+%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%
+% CHAPTER 10
+%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%
+
 \begin{comment}
 \chapter{Building Data APIs with HTTP/JSON}
-\label{lab09}
+\label{lab10}
 \paragraph{} 
 \end{comment}
 
