Add initial pycrypto and pybcrypt sections

--- a/workbook/workbook.tex
+++ b/workbook/workbook.tex
@@ -2102,9 +2102,22 @@ for a little bit of style</p>
 %%%%%%%%%%%%%%%%%
 
 %\begin{comment}
-\chapter{Encryption}
+\chapter{Keeping Data safe with Encryption}
 \label{lab09}
-\paragraph{} 
+\paragraph{} Encryption is necessary to ensure that the data that we collect in our web-apps, for example, about our users, is stored safely.
+
+
+\section{Using PyCrypto Library for data encryption}
+\label{pycrypto}
+\paragraph{} PyCrypto is the Python Cryptography Toolkit and provides a range of useful tools for encyrpting and working with encrypted data in Python. You can install PyCrypto using the pip tool as follows (NB. If you haven't installed Pip yet then visit section \ref{pip} first before continuing):
+
+\paragraph{}
+
+\section{Using PyBCrypt Library for password hashing}
+\label{pybcrypt}
+\paragraph{}
+
+
 %\end{comment}
 
 
