Add label to pip section for cross-freferncing

--- a/workbook/workbook.tex
+++ b/workbook/workbook.tex
@@ -2292,6 +2292,7 @@ Calls the run() function of the Flask app class instance to start our developmen
 \end{lstlisting}
 
 \section{Pip}
+\label{pip}
 \paragraph{} Pip is a package management tool for Python libraries and is really easy to use. On Levinux we have to install Pip so we must do the following:
 
 \begin{lstlisting}[style=DOS]
