--- a/workbook/workbook.tex
+++ b/workbook/workbook.tex
@@ -2109,13 +2109,64 @@ for a little bit of style</p>
 
 \section{Using PyCrypto Library for data encryption}
 \label{pycrypto}
-\paragraph{} PyCrypto is the Python Cryptography Toolkit and provides a range of useful tools for encyrpting and working with encrypted data in Python. You can install PyCrypto using the pip tool as follows (NB. If you haven't installed Pip yet then visit section \ref{pip} first before continuing):
+\paragraph{} PyCrypto\footnote{\url{https://www.dlitz.net/software/pycrypto/}} is the Python Cryptography Toolkit and provides a range of useful tools for encyrpting and working with encrypted data in Python. You can install PyCrypto using the pip tool as follows (NB. If you haven't installed Pip yet then visit section \ref{pip} first before continuing):
 
-\paragraph{}
+\begin{lstlisting}[style=DOS]
+    $ pip install pycrypto
+\end{lstlisting}
 
-\section{Using PyBCrypt Library for password hashing}
+\paragraph{} You can now import and use PyCrypto within your web-apps, however let's first explore what the library can do in the Python REPL, so launch python in your shell, e.g.
+
+\begin{lstlisting}[style=DOS]
+    $ python
+\end{lstlisting}
+
+\paragraph{} We can now look at some of the things that we can use PyCrypto to do. First we shall look at Hashing, taking input and calculating a fixed-length output called a hash-value, then we will look at Encryption, taking input and a key and producing a cypher text. The main difference between the two in practise is that hash algorithms are designed, as a rule, to be one-way or \emph{trapdoor} functions, whilst, so long as you know the key, encryption algorithms are designed to enable you to recover the input from the cyphertext.
+
+\subsection{Hashing}
+\paragraph{} The idea with Hashing is to take as input a string and calculate a fixed length output string called the \emph{hash value}. This is a useful way to quickly determine whether two strings are the same, for example if wanting to ensure that the string that was transmitted is the one that was received. In that case we would calculate the hash value associated with the string, then transmit both the string and the hash value to the remote recipient who then recalculates the hash value from the string then compares the two hash values. if they differ then the string was altered in transit and if they are the same the string that was recieved is the one that was sent. This kind of usage is called \emph{file integrity checking} but is also known as \emph{checksumming} or \emph{calculating a checksum}.
+
+\paragraph{} Hashing relies on various assumptions:
+
+\begin{enumerate}
+\item It should be very difficult (if not impossible) to guess the input string based upon the output string
+\item It should be very difficult (if not impossible) to find two different input strings that have the same output (known as a \emph{collision})
+\item It should be very difficult (if not impossible) to modify the input string without also modifying the hash value as a result.
+\end{enumerate}
+
+\paragraph{} We can hash a value, e.g. a string, using a range of hash functions but we can start with SHA256. First we will hash the value passed directly to SHA256 then we will compare it to the same value stored in a string and passed in, and a different value:
+
+\begin{lstlisting}[style=DOS]
+    >>> from Crypto.Hash import SHA256
+    >>> SHA256.new('Hello Napier').hexdigest()
+    '8fa01d2f5f442915112a4c98d5c65c909f8b5532f01102371cf81776b91e5694'
+    >>>
+    >>> hello_napier = 'Hello Napier'
+    >>> SHA256.new(hello_napier).hexdigest()
+    '8fa01d2f5f442915112a4c98d5c65c909f8b5532f01102371cf81776b91e5694'
+    >>> 
+    >>> SHA256.new('Goodbye Napier').hexdigest()
+    'ebccfcde2209e3dff4deff67fdbae71129ea87692e40295768de48317244347e'
+    >>>
+\end{lstlisting}
+
+\subsection{Encryption with Block Cyphers}
+\paragraph{} Block cyphers work on their input data in \emph{blocks} of a fixed size, for example, blocks of 8 or 16 bytes in length. 
+
+
+
+\subsection{Encryption with Stream Cyphers}
+\paragraph{} Stream cyphers differ from Block cyphers by working on byte-by-byte on their input data, treating the data as a stream instead of discrete blocks.
+
+\subsection{Public Key Encryption}
+\paragraph{} 
+
+
+
+\section{Using PyBCrypt Library for Password Hashing}
 \label{pybcrypt}
 \paragraph{}
+\paragraph{} Hash functions can be used in password management and storage. Web sites should only store the hash of a password and not the raw password itself. This way only the user knows the real password. When the user logs in, the hash of the password input is generated and compared to the hash value stored in the database. If it matches, the user is granted access\footnote{If you ever use a website that can help you to \emph{recover} your password then they probably aren't hashing passwords. In this case you should probably question the security of that site and their ability to keep your data safe.}. Whilst you could use the hashes available in PyCrypto for user passwords, this is no longer the most secure approach. Rather you should use a type of password hash that has been specifically designed to be hard to crack. Such hashes are known as \emph{key derivation functions} and are designed to significantly slow down the process of hashing a value so that brute force attacks, where you try to calculate all possible hashes, become significantly expensive in terms of time to calculate. This contrasts with hashes used for checksumming, which obviously need to run as fast as possible.
 
 
 %\end{comment}
