Add para to move to db+flask section

--- a/workbook/workbook.tex
+++ b/workbook/workbook.tex
@@ -2155,7 +2155,7 @@ for a little bit of style</p>
     >>> cursor.fetchall()[(u'Greatest Hits', u'Roy Orbison', u'30.11.1977', u'SWRecords', u'vinyl')]
 \end{lstlisting}
 
-\paragraph{} 
+\paragraph{} For more advanced SQL queries we should look to the SQL documentationbecause this module isn't really about SQL query construction. For now however we can move on to look at how to integrate an SQLite3 database with Flask.
 
 
 \paragraph{} There are many data storage mechanisms and the availabilty of high-quality and performant datastores has increased greatly in recent years with the advent of the NoSQL approach. This approach suggests that there are {\bf{N}}ot {\bf{O}}nly {\bf{SQL}} based approaches to storing data but many approaches, and the one that you choose should be based upon a sound assessment of the nature of the problem that you are tackling as well as the knowledge and experience of your development team. So, for example, there are a number of column-oriented, document oriented, graph-oriented, and key-value datastores, and many hybrids, which can be very useful when developing new web-apps. For example, when trying out various solutions to a problem it can be useful to use a schemaless datastore to hold your initial attempts at building a data model so that you do not waste time prematurely attempting to identify good database schema or relational models. 
