Fix minor typo in appendix c.3

--- a/workbook/workbook.tex
+++ b/workbook/workbook.tex
@@ -2694,7 +2694,7 @@ Calls the run() function of the Flask app class instance to start our developmen
     {\bf Task}                          & {\bf Command} \\
     Install a package from the repo     & tce-load -wi pkg \\
     Install from a local file           & tce-load -i pkg \\
-    Search apt-cache search pattern	    & tce-ab \\
+    Search available packages	        & tce-ab \\
     List installed packages             & ls /usr/local/tce.installed \\
     \end{tabular}
     \caption {TCE Commands}
